<resources>
    <string name="app_name">Poplatky Helper</string>

    <string-array name="measure_types">
        <item>Electricity</item>
        <item>Water</item>
        <item>Natural Gas</item>
    </string-array>

    <string name="pref_key_tariffElectricity">Electricity tariff</string>
    <string name="pref_key_tariffWater">Water tariff</string>
    <string name="pref_key_tariffNaturalGas">Natural gas tariff</string>

    <string name="pref_title_electricity">Electricity</string>
    <string name="pref_title_water">Water</string>
    <string name="pref_title_naturalGas">Natural gas</string>

    <string name="pref_summ_electricity">Set electricity tariff</string>
    <string name="pref_summ_water">Set water tariff</string>
    <string name="pref_summ_naturalGas">Set natural gas tariff</string>

    <string name="pref_dialog_electricity">Set the price for 1 MWh</string>
    <string name="pref_dialog_water">Set the price for 1 cubic meter of water</string>
    <string name="pref_dialog_naturalGas">Set the price for 1 cubic meter of natural gas</string>

    <string name="action_settings">Settings</string>

    <string name="statistics_tab">Statistics</string>
    <string name="history_tab">History</string>

    <string name="dialog_editing_title">Editing task</string>

    <string name="dialog_title">Adding measure</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_error_empty_value">Please, enter the value</string>
    <string name="dialog_error_incorrect_value">Incorrect value</string>

    <string name="dialog_removing_message">Are you sure you want o delete this measure?</string>
    <string name="removed">Measure removed</string>

    <string name="measure_value">Value</string>
    <string name="measure_date">Date</string>
    <string name="dialog_removing_yes">Yes</string>
    <string name="dialog_removing_cancel">Cancel</string>

    <string name="separator_electricity">Electricity</string>
    <string name="separator_water">Water</string>
    <string name="separator_naturalGas">Natural gas</string>


</resources>
